# AndroidVulkanInterop

./: build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build-app.yml
android_vulkan_interop/: Cargo.toml  build.rs
android_vulkan_interop/src/: lib.rs  native_window.rs
aosp/cutils/: native_handle.h
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/rust/androidvulkaninterop/: MainActivity.kt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
